# rust-opentelemetry-example

./: Cargo.toml  README.md
src/: main.rs
