[package]
name = "rust-opentelemetry-example"
version = "0.1.0"
edition = "2021"

[dependencies]
opentelemetry = { version = "0.22", features = ["metrics", "trace"] }
opentelemetry-otlp = { version = "0.15", features = ["metrics", "trace"] }
opentelemetry_sdk = { version = "0.22", features = ["metrics", "trace"] }

tracing = { version = "0.1", features = ["attributes"] }
tracing-opentelemetry = "0.23"
tracing-subscriber = { version = "0.3", features = ["time", "env-filter"] }

tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
anyhow = "1"
